# hitcon-pcb-badge

./: .gitignore  README.md
backend/: app.py  config.yaml  crypto_auth.py  crypto_auth_layer.py  database.py  ecc_utils.py  game_logic.py  game_logic_controller.py  main.py  packet_processor.py  requirements.txt  schemas.py
base-station/: .gitignore  backend_interface.py  backend_interface_new.py  config.py  config.yaml  ir_interface.py  main.py  packet_processor.py  packet_recorder.py  pyproject.toml
base-station/test/: fake_client.py  fake_server.py  fake_serverV02.py
docs/: game_mechanics.md  pet_game_mechanics.md  tower_game_mechanics.md
fw/: .cproject  .gitignore  .mxproject  fw Debug.launch  fw.ioc
fw/Core/Hitcon/: Hitcon.cpp  Hitcon.h
fw/Core/Hitcon/App/: ConnectMenuApp.cc  ConnectMenuApp.h  DebugApp.cc  DebugApp.h  HardwareTestApp.cc  HardwareTestApp.h  MainMenuApp.h  MultiplayerGame.cc  MultiplayerGame.h  ShowNameApp.cc  ShowNameApp.h  SnakeApp.cc  SnakeApp.h  TamaApp.cc  TamaApp.h  TetrisApp.cc  TetrisApp.h
fw/Core/Hitcon/Logic/: BadgeController.cc  BadgeController.h  EcLogic.cc  EcLogic.h  GameController.cc  GameController.h  GameParam.h  GameScore.cc  GameScore.h  ImuLogic.cc  ImuLogic.h  (+12 more)
fw/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
fw/Core/Src/: gpio.c  i2c.c  main.cc  stm32f1xx_it.c  tim.c  usart.c
pcb/kicad/pcb_badge/: LED Matrix.kicad_sch  LED Matrix2.kicad_sch  MCU.kicad_sch  Power.kicad_sch  myLib.bak  myLib.kicad_sym  pcb_badge.kicad_pcb  pcb_badge.kicad_prl  pcb_badge.kicad_pro  pcb_badge.kicad_sch  rotations.csv
(+58 files in other folders)
