[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "base-station"
version = "0.1.0"
description = "Base station software for HITCON 2025"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
]

[tool.setuptools.packages.find]
namespaces = false
